Añado alt a todas las imagenes

--- a/PORTFOLIO/paginas/index1.html
+++ b/PORTFOLIO/paginas/index1.html
@@ -57,32 +57,32 @@
       <div class="row g-0">
         <div class="col-12 col-md-4">
           <a href="index3.html"
-            ><img src="../img/lasanica3.png" class="img-fluid" alt=""
+            ><img src="../img/lasanica3.png" class="img-fluid" alt="carteles la sanica"
           /></a>
         </div>
         <div class="col-12 col-md-4">
           <a href="index5.html"
-            ><img src="../img/rea1.png" class="img-fluid" alt=""
+            ><img src="../img/rea1.png" class="img-fluid" alt="mockup de cartelería"
           /></a>
-        </div>
+        </div
         <div class="col-12 col-md-4">
           <a href="index6.html"
-            ><img src="../img/fotolibro1.png" class="img-fluid" alt=""
+            ><img src="../img/fotolibro1.png" class="img-fluid" alt="fotolibro"
           /></a>
         </div>
         <div class="col-12 col-md-4">
           <a href="index4.html"
-            ><img src="../img/viroa1.png" class="img-fluid" alt=""
+            ><img src="../img/viroa1.png" class="img-fluid" alt="logo viroa"
           /></a>
         </div>
         <div class="col-12 col-md-4">
           <a href="index8.html"
-            ><img src="../img/fliparte1.png" class="img-fluid" alt=""
+            ><img src="../img/fliparte1.png" class="img-fluid" alt="marcapaginas fliparte"
           /></a>
         </div>
         <div class="col-12 col-md-4">
           <a href="index5.html"
-            ><img src="../img/rea4.png" class="img-fluid" alt=""
+            ><img src="../img/rea4.png" class="img-fluid" alt="rea logotipo"
           /></a>
         </div>
       </div>
