--- a/PORTFOLIO/paginas/index2.html
+++ b/PORTFOLIO/paginas/index2.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Portfolio Isabel García</title>
     <link rel="stylesheet" href="../estilos/estilo1.css" />
   </head>
   <body>
@@ -68,13 +68,13 @@
           </p>
         </div>
         <div class="col-12 col-md-4">
-          <img src="../img/diabetes1.png" class="img-fluid" alt="" />
+          <img src="../img/diabetes1.png" class="img-fluid" alt="persona poniendose insulina" />
         </div>
         <div class="col-12 col-md-4">
-          <img src="../img/diabetes2.png" class="img-fluid" alt="" />
+          <img src="../img/diabetes2.png" class="img-fluid" alt="persona poniendose un sensor para la diabetes" />
         </div>
         <div class="col-12 col-md-4">
-          <img src="../img/diabetes3.png" class="img-fluid" alt="" />
+          <img src="../img/diabetes3.png" class="img-fluid" alt="plumas de insulina" />
         </div>
         <div>
           <p class="titulo">Embarazo</p>
@@ -87,13 +87,13 @@
           </p>
         </div>
         <div class="col-12 col-md-4">
-          <img src="../img/sesiones4.png" class="img-fluid" alt="" />
+          <img src="../img/sesiones4.png" class="img-fluid" alt="sesion en la playa de una pareja" />
         </div>
         <div class="col-12 col-md-4">
-          <img src="../img/sesiones5.png" class="img-fluid" alt="" />
+          <img src="../img/sesiones5.png" class="img-fluid" alt="sesion de embarazada en pasarela" />
         </div>
         <div class="col-12 col-md-4">
-          <img src="../img/sesion6.png" class="img-fluid" alt="" />
+          <img src="../img/sesion6.png" class="img-fluid" alt="embarazada en la playa" />
         </div>
         <div>
           <p class="titulo">Para los más pequeños</p>
@@ -106,13 +106,13 @@
           </p>
         </div>
         <div class="col-12 col-md-4">
-          <img src="../img/sesiones1.png" class="img-fluid" alt="" />
+          <img src="../img/sesiones1.png" class="img-fluid" alt="niña mirandose en un espejo" />
         </div>
         <div class="col-12 col-md-4">
-          <img src="../img/sesiones2.png" class="img-fluid" alt="" />
+          <img src="../img/sesiones2.png" class="img-fluid" alt="familia en el bosque" />
         </div>
         <div class="col-12 col-md-4">
-          <img src="../img/sesiones3.png" class="img-fluid" alt="" />
+          <img src="../img/sesiones3.png" class="img-fluid" alt="niño en las escaleras de una pasarela" />
         </div>
         <div>
           <p class="titulo">Experimentos con agua</p>
@@ -125,13 +125,13 @@
           </p>
         </div>
         <div class="col-12 col-md-4">
-          <img src="../img/bebida1.png" class="img-fluid" alt="" />
+          <img src="../img/bebida1.png" class="img-fluid" alt="copa con agua saltando" />
         </div>
         <div class="col-12 col-md-4">
-          <img src="../img/bebida2.png" class="img-fluid" alt="" />
+          <img src="../img/bebida2.png" class="img-fluid" alt="copa y vaso con bebida saltando y botella de alchol por detras" />
         </div>
         <div class="col-12 col-md-4">
-          <img src="../img/bebida3.png" class="img-fluid" alt="" />
+          <img src="../img/bebida3.png" class="img-fluid" alt="copa y vaso con liquido congelado en la fotografia saltando" />
         </div>
         <div>
           <p class="titulo">Experimentos con humo</p>
@@ -144,13 +144,13 @@
           </p>
         </div>
         <div class="col-12 col-md-4">
-          <img src="../img/humo1.png" class="img-fluid" alt="" />
+          <img src="../img/humo1.png" class="img-fluid" alt="foto de una tetera con humo" />
         </div>
         <div class="col-12 col-md-4">
-          <img src="../img/humo2.png" class="img-fluid" alt="" />
+          <img src="../img/humo2.png" class="img-fluid" alt="foto de una tetera con humo y fondo oscuro" />
         </div>
         <div class="col-12 col-md-4">
-          <img src="../img/humo3.png" class="img-fluid" alt="" />
+          <img src="../img/humo3.png" class="img-fluid" alt="foto de una tetera con humo y fondo oscuro" />
         </div>
       </div>
       <div class="d-flex justify-content-center gap-4 mt-5">
