--- a/PORTFOLIO/paginas/index3.html
+++ b/PORTFOLIO/paginas/index3.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Portfolio Isabel García</title>
     <link rel="stylesheet" href="../estilos/estilo1.css" />
   </head>
   <body>
@@ -68,17 +68,17 @@
         </div>
 
         <div class="col-12 col-md-4">
-          <img src="../img/lasanica2.png" class="img-fluid" alt="" />
+          <img src="../img/lasanica2.png" class="img-fluid" alt="packaging la sanica" />
         </div>
         <div class="col-12 col-md-4">
-          <img src="../img/lasanica1.png" class="img-fluid" alt="" />
+          <img src="../img/lasanica1.png" class="img-fluid" alt="logotipo la sanica" />
         </div>
         <div class="col-12 col-md-4">
-          <img src="../img/lasanica3.png" class="img-fluid" alt="" />
+          <img src="../img/lasanica3.png" class="img-fluid" alt="carteles la sanica" />
         </div>
 
         <div class="col-12 col-md-4">
-          <img src="../img/lasanica4.png" class="img-fluid" alt="" />
+          <img src="../img/lasanica4.png" class="img-fluid" alt="camiseta la sanica" />
         </div>
         <div class="col-12 col-md-8">
           <img src="../img/lasanica5.png" class="img-fluid" alt="" />
