--- a/PORTFOLIO/paginas/index5.html
+++ b/PORTFOLIO/paginas/index5.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Portfolio Isabel García</title>
     <link rel="stylesheet" href="../estilos/estilo1.css"/>
   </head>
   <body>
@@ -52,23 +52,23 @@
     </div>
     
      <div class=" col-12 col-md-4">
-      <img src="../img/rea1.png" class="img-fluid" alt="">
+      <img src="../img/rea1.png" class="img-fluid" alt="patron rea">
     </div>
     <div class="col-12 col-md-4">
-      <img src="../img/rea2.png" class="img-fluid" alt="">
+      <img src="../img/rea2.png" class="img-fluid" alt="logo rea en distintas versiones">
     </div>
       <div class=" col-12 col-md-4">
-        <img src="../img/rea3.png" class="img-fluid" alt="">
+        <img src="../img/rea3.png" class="img-fluid" alt="versiones con fondo blanco">
   </div>
   
   <div class=" col-12 col-md-4">
-        <img src="../img/rea4.png" class="img-fluid" alt="">
+        <img src="../img/rea4.png" class="img-fluid" alt="logotipo rea">
   </div>
   <div class=" col-12 col-md-4">
-        <img src="../img/rea5.png" class="img-fluid" alt="">
+        <img src="../img/rea5.png" class="img-fluid" alt="acreditaciones identificativas">
   </div>
   <div class=" col-12 col-md-4">
-        <img src="../img/rea6.png" class="img-fluid" alt="">
+        <img src="../img/rea6.png" class="img-fluid" alt="mockup de cartelería">
   </div>
   
    <div class="d-flex justify-content-center gap-4 mt-5">
