--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -17,13 +17,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Portfolio Isabel García</title>
     <link rel="stylesheet" href="estilos/estilo1.css"/>
   </head>
   <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img class="logo" src="img/bel.png" alt="Logo" /></a>
+    <a class="navbar-brand" href="#"><img class="logo" src="img/bel.png" alt="Logo Bel"/></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -51,13 +51,13 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="carrusel" src="img/carrousel-47.png" alt="Los Angeles" class="d-block" />
+      <img class="carrusel" src="img/carrousel-47.png" alt="Imagen carrousel fotolibro " class="d-block"/>
     </div>
     <div class="carousel-item">
-      <img class="carrusel" src="img/carrousel-48.png" alt="Chicago" class="d-block" />
+      <img class="carrusel" src="img/carrousel-48.png" alt="Imagen carrousel manos amasando" class="d-block"/>
     </div>
     <div class="carousel-item">
-      <img class="carrusel" src="img/carrousel-49.png" alt="New York" class="d-block" />
+      <img class="carrusel" src="img/carrousel-49.png" alt="Imagen carrousel embarazada" class="d-block"/>
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
@@ -77,40 +77,40 @@
     <div class="container-fluid p-0">
   <div class="row g-0">
     <div class="col12 col-md-4">
-      <a href="paginas/index2.html"><img src="img/diabetes2.png" class="img-fluid " alt=""></a>
+      <a href="paginas/index2.html"><img src="img/diabetes2.png" class="img-fluid " alt="persona diabetica pinchándose"></a>
     </div>
      <div class="col-12 col-md-4">
-      <a href="paginas/index2.html"><img src="img/sesiones1.png" class="img-fluid" alt=""></a>
+      <a href="paginas/index2.html"><img src="img/sesiones1.png" class="img-fluid" alt="sesiones de fotos"></a>
     </div>
     <div class="col-12 col-md-4">
-       <a href="paginas/index2.html"><img src="img/bebida1.png" class="img-fluid" alt=""></a>
+       <a href="paginas/index2.html"><img src="img/bebida1.png" class="img-fluid" alt="imagen agua salpicando en copa"></a>
     </div>
     <div class="col-12 col-md-4">
-      <a href="paginas/index3.html"><img src="img/lasanica3.png" class="img-fluid" alt=""></a>
+      <a href="paginas/index3.html"><img src="img/lasanica3.png" class="img-fluid" alt="imagen de carteles de la Sanica"></a>
     </div>
      <div class=" col-12 col-md-4">
-      <a href="paginas/index5.html"><img src="img/rea1.png" class="img-fluid" alt=""></a>
+      <a href="paginas/index5.html"><img src="img/rea1.png" class="img-fluid" alt=" patron decorativo para la Red Empleo de Alicante"></a>
     </div>
       <div class=" col-12 col-md-4">
-        <a href="paginas/index6.html"><img src="img/fotolibro1.png" class="img-fluid" alt=""></a>
+        <a href="paginas/index6.html"><img src="img/fotolibro1.png" class="img-fluid" alt="fotolibro"></a>
   </div>
   <div class=" col-12 col-md-4">
-        <a href="paginas/index4.html"><img src="img/viroa1.png" class="img-fluid" alt=""></a>
+        <a href="paginas/index4.html"><img src="img/viroa1.png" class="img-fluid" alt="logotipo viroa"></a>
   </div>
   <div class=" col-12 col-md-4">
-        <a href="paginas/index3.html"><img src="img/lasanica1.png" class="img-fluid" alt=""></a>
+        <a href="paginas/index3.html"><img src="img/lasanica1.png" class="img-fluid" alt="logotipo la sanica"></a>
   </div>
   <div class=" col-12 col-md-4">
-        <a href="paginas/index5.html"><img src="img/rea4.png" class="img-fluid" alt=""></a>
+        <a href="paginas/index5.html"><img src="img/rea4.png" class="img-fluid" alt="logotipo REA"></a>
   </div>
   <div class=" col-12 col-md-4">
-         <a href="paginas/index2.html"><img src="img/sesiones2.png" class="img-fluid" alt=""></a>
+         <a href="paginas/index2.html"><img src="img/sesiones2.png" class="img-fluid" alt="sesiones de fotos"></a>
   </div>
   <div class=" col-12 col-md-4">
-         <a href="paginas/index2.html"><img src="img/sesiones3.png" class="img-fluid" alt=""></a>
+         <a href="paginas/index2.html"><img src="img/sesiones3.png" class="img-fluid" alt="sesiones de fotos"></a>
   </div>
   <div class=" col-12 col-md-4">
-        <a href="paginas/index2.html"><img src="img/sesiones5.png" class="img-fluid" alt=""></a>
+        <a href="paginas/index2.html"><img src="img/sesiones5.png" class="img-fluid" alt="sesiones de fotos"></a>
   </div>
 </div>
 </div>
