--- a/PORTFOLIO/paginas/index4.html
+++ b/PORTFOLIO/paginas/index4.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Portfolio Isabel García</title>
     <link rel="stylesheet" href="../estilos/estilo1.css"/>
   </head>
   <body>
@@ -52,20 +52,20 @@
     </div>
     
      <div class=" col-12 col-md-4">
-      <img src="../img/viroa1.png" class="img-fluid" alt="">
+      <img src="../img/viroa1.png" class="img-fluid" alt="logotipo viroa">
     </div>
     <div class="col-12 col-md-4">
-      <img src="../img/viroa2.png" class="img-fluid" alt="">
+      <img src="../img/viroa2.png" class="img-fluid" alt="patron viroa">
     </div>
       <div class=" col-12 col-md-4">
-        <img src="../img/viroa3.png" class="img-fluid" alt="">
+        <img src="../img/viroa3.png" class="img-fluid" alt="mockup viroa">
   </div>
   
   <div class=" col-12 col-md-4">
-        <img src="../img/viroa4.png" class="img-fluid" alt="">
+        <img src="../img/viroa4.png" class="img-fluid" alt="redes sociales viroa">
   </div>
   <div class=" col-12 col-md-8">
-        <img src="../img/viroa5.png" class="img-fluid" alt="">
+        <img src="../img/viroa5.png" class="img-fluid" alt="chaquetilla logo viroa">
   </div>
   
    <div class="d-flex justify-content-center gap-4 mt-5">
