--- a/PORTFOLIO/paginas/index6.html
+++ b/PORTFOLIO/paginas/index6.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Portfolio Isabel García</title>
     <link rel="stylesheet" href="../estilos/estilo1.css"/>
   </head>
   <body>
@@ -52,20 +52,20 @@
     </div>
     
      <div class=" col-12 col-md-4">
-      <img src="../img/fotolibro1.png" class="img-fluid" alt="">
+      <img src="../img/fotolibro1.png" class="img-fluid" alt="imagen fotolibro">
     </div>
     <div class="col-12 col-md-4">
-      <img src="../img/fotolibro2.png" class="img-fluid" alt="">
+      <img src="../img/fotolibro2.png" class="img-fluid" alt="fotolibro">
     </div>
       <div class=" col-12 col-md-4">
-        <img src="../img/fotolibro3.png" class="img-fluid" alt="">
+        <img src="../img/fotolibro3.png" class="img-fluid" alt="fotolibro">
   </div>
   
   <div class=" col-12 col-md-4">
-        <img src="../img/fotolibro4.png" class="img-fluid" alt="">
+        <img src="../img/fotolibro4.png" class="img-fluid" alt="fotolibro">
   </div>
   <div class=" col-12 col-md-8">
-        <img src="../img/fotolibro5.png" class="img-fluid" alt="">
+        <img src="../img/fotolibro5.png" class="img-fluid" alt="fotolibro">
   </div>
   
    <div class="d-flex justify-content-center gap-4 mt-5">
