--- a/PORTFOLIO/paginas/index8.html
+++ b/PORTFOLIO/paginas/index8.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Portfolio Isabel García</title>
     <link rel="stylesheet" href="../estilos/estilo1.css"/>
   </head>
   <body>
@@ -52,20 +52,20 @@
     </div>
     
      <div class=" col-12 col-md-4">
-      <img src="../img/fliparte1.png" class="img-fluid" alt="">
+      <img src="../img/fliparte1.png" class="img-fluid" alt="marcapaginas fliparte">
     </div>
     <div class="col-12 col-md-4">
-      <img src="../img/fliparte2.png" class="img-fluid" alt="">
+      <img src="../img/fliparte2.png" class="img-fluid" alt="totebag fliparte con estampado de flores y paletas de pintura">
     </div>
       <div class=" col-12 col-md-4">
-        <img src="../img/fliparte3.png" class="img-fluid" alt="">
+        <img src="../img/fliparte3.png" class="img-fluid" alt="sellos por detras de la marca fliparte">
   </div>
   
   <div class=" col-12 col-md-4">
-        <img src="../img/fliparte4.png" class="img-fluid" alt="">
+        <img src="../img/fliparte4.png" class="img-fluid" alt="sellos por detrás dentro de la caja de fliparte">
   </div>
   <div class=" col-12 col-md-8">
-        <img src="../img/fliparte5.png" class="img-fluid" alt="">
+        <img src="../img/fliparte5.png" class="img-fluid" alt="diferentes productos de fliparte: marcapaginas, libretas, totebags y cajas de sellos">
   </div>
   <div class="d-flex justify-content-center gap-4 mt-5">
   <a href="index1.html" class="btn btn-outline-dark boton">
